Added SonarCloud Analysis

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,10 +27,20 @@ stages:
       - job: BuildAngularApplication
         displayName: 'Build Angular Application'
         steps:
+
           - task: NodeTool@0
             displayName: 'Install Node.js'
             inputs:
               versionSpec: '12.18.0'
+
+          - task: SonarCloudPrepare@1
+            inputs:
+              SonarCloud: 'SonarCloud (Vita)'
+              organization: 'vita'
+              scannerMode: 'MSBuild'
+              projectKey: 'DiegoArranzGarcia_Vita.Goals'
+              projectName: 'Vita.Core'
+
           - task: Bash@3
             inputs:
               targetType: 'inline'
@@ -38,6 +48,7 @@ stages:
               script: |
                 npm install
             displayName: 'npm install'
+
           - task: Bash@3
             inputs:
               targetType: 'inline'
@@ -45,6 +56,13 @@ stages:
               script: |
                 npm run build --prod
             displayName: 'Build Angular SPA'
+
+          - task: SonarCloudAnalyze@1
+
+          - task: SonarCloudPublish@1
+            inputs:
+              pollingTimeoutSec: '300'
+
           - task: gulp@0
             inputs:
               gulpFile: $(SPADirectory)/gulpfile.js
@@ -53,6 +71,7 @@ stages:
               gulpjs: $(SPADirectory)/node_modules/gulp/bin/gulp.js
               enableCodeCoverage: false
             displayName: 'Tokenizing Configuration files'
+
           - task: PublishBuildArtifacts@1
             inputs:
               PathtoPublish: '$(SPADirectory)/dist'
