Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
               cliProjectName: 'Vita.Web'
               cliSources: '.'
               extraProperties: |
-                sonar.inclusions=**/src/**/*
+                sonar.inclusions=src/**/*
 
           - task: Bash@3
             inputs:
