--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
               cliProjectName: 'Vita.Web'
               cliSources: '.'
               extraProperties: |
-                sonar.sources = **/src
+                sonar.inclusions = src;e2e
 
           - task: Bash@3
             inputs:
