Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,8 @@ stages:
               cliProjectKey: 'DiegoArranzGarcia_Vita.Web'
               cliProjectName: 'Vita.Web'
               cliSources: '.'
+              extraProperties: |
+                sonar.exclusions=**/node_modules
 
           - task: Bash@3
             inputs:
