--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
               cliProjectName: 'Vita.Web'
               cliSources: '.'
               extraProperties: |
-                sonar.exclusions=**/node_modules
+                sonar.exclusions=node_modules
 
           - task: Bash@3
             inputs:
