--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,9 @@ stages:
               cliProjectName: 'Vita.Web'
               cliSources: '.'
               extraProperties: |
-                sonar.exclusions=node_modules
+                sonar.sources=src/app,src/@vimbo
+                sonar.exclusions=**/dist/**/*,**/node_modules/**,**/*.spec.ts,**/assets/*
+                sonar.ts.tslint.configPath=tslint.json
 
           - task: Bash@3
             inputs:
