--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,27 @@
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "extractLicenses": true,
+              "vendorChunk": true,
+              "buildOptimizer": false,
+              "aot": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "6mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -63,6 +84,9 @@
             "browserTarget": "Vita:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "Vita:build:development"
+            },
             "production": {
               "browserTarget": "Vita:build:production"
             }
@@ -107,6 +131,5 @@
         }
       }
     }
-  },
-  "defaultProject": "Vita"
+  }
 }
